--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-three/fiber": "^8.17.10",
     "aceternity-ui": "^0.2.2",
     "clsx": "^2.1.1",
+    "firebase": "^11.1.0",
     "framer-motion": "^11.11.9",
     "mini-svg-data-uri": "^1.4.4",
     "react": "^18.3.1",
