--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,80 @@
+# Dependências
+/node_modules
+/.pnp
+.pnp.js
+
+# Testes
+/coverage
+
+# Produção
+/build
+
+# Variáveis de ambiente locais
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
 # Logs
-logs
-*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
-*.local
-
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# Arquivos do sistema
 .DS_Store
+Thumbs.db
+
+# Arquivos do editor
+.idea/
+.vscode/
+*.swp
+*.swo
+
+# Firebase
+firebase-debug.log
+firebase-debug.*.log
+.firebase/
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+src/firebase/config.ts
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+logs
+*.log
+
+# editor directories and files
+.idea
+.vscode
 *.suo
 *.ntvs*
 *.njsproj
 *.sln
 *.sw?
+
+# cache
+.cache/
+.next/
+.nuxt/
+.cache
+.parcel-cache
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# temporary files
+*.tmp
+*.temp
+.eslintcache
+
+# vercel
+.vercel
+
+# local netlify folder
+.netlify
